<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/appwidget_dark_bg"
                tools:ignore="Overdraw">

    <ImageButton
        android:id="@+id/application_launch"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/appwidget_button_left"
        android:contentDescription="@string/application_launch"
        android:padding="@dimen/appwidget_padding"
        android:src="@drawable/ic_launcher_48"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/application_launch"
        android:layout_toRightOf="@id/application_launch"
        android:padding="@dimen/appwidget_padding">

        <TextView
            android:id="@+id/average_duration_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:text="@string/average_duration_label"
            android:textColor="@android:color/primary_text_dark"/>

        <TextView
            android:id="@+id/average_frequency_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/average_duration_label"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:text="@string/average_frequency_label"
            android:textColor="@android:color/primary_text_dark"/>

        <TextView
            android:id="@+id/average_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/average_frequency_label"
            android:layout_toRightOf="@id/average_frequency_label"
            android:textColor="@android:color/primary_text_dark"
            android:textIsSelectable="false"/>

        <TextView
            android:id="@+id/average_frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/average_duration"
            android:layout_toEndOf="@id/average_frequency_label"
            android:layout_toRightOf="@id/average_frequency_label"
            android:textColor="@android:color/primary_text_dark"
            android:textIsSelectable="false"/>
    </RelativeLayout>

    <Button
        android:id="@+id/contraction_toggle_off"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/appwidget_button_right"
        android:drawableBottom="@android:drawable/button_onoff_indicator_off"
        android:padding="@dimen/appwidget_padding"
        android:text="@string/appwidget_contraction_start"
        android:textColor="@android:color/primary_text_dark"/>

    <Button
        android:id="@+id/contraction_toggle_on"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/appwidget_button_right"
        android:drawableBottom="@android:drawable/button_onoff_indicator_on"
        android:padding="@dimen/appwidget_padding"
        android:text="@string/appwidget_contraction_stop"
        android:textColor="@android:color/primary_text_dark"
        android:visibility="gone"/>

</RelativeLayout>